--- a/package.json
+++ b/package.json
@@ -1,34 +1,30 @@
 {
   "babel": {
     "presets": [
-      "es2015"
+      "@babel/preset-env"
     ]
   },
   "devDependencies": {
-    "@alrra/travis-scripts": "^2.1.0",
-    "apache-server-configs": "2.14.0",
-    "archiver": "^0.21.0",
-    "babel-core": "^6.13.2",
-    "babel-preset-es2015": "^6.6.0",
-    "del": "^2.2.1",
+    "@babel/core": "^7.13.14",
+    "@babel/preset-env": "^7.13.12",
+    "@babel/register": "^7.13.14",
+    "apache-server-configs": "^4.1.0",
+    "archiver": "^5.3.0",
+    "del": "^6.0.0",
     "glob": "^7.0.5",
-    "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^3.0.2",
+    "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^7.0.1",
     "gulp-cssnano": "^2.1.2",
-    "gulp-header": "^1.8.3",
-    "gulp-jscs": "^3.0.1",
-    "gulp-jshint": "^2.0.0",
-    "gulp-load-plugins": "^1.1.0",
-    "gulp-rename": "^1.2.0",
-    "gulp-replace": "^0.5.3",
-    "gulp-uglify": "^2.0.0",
-    "jquery": "1.12.4",
+    "gulp-header": "^2.0.9",
+    "gulp-load-plugins": "^2.0.6",
+    "gulp-rename": "^2.0.0",
+    "gulp-replace": "^1.0.0",
+    "gulp-uglify": "^3.0.2",
+    "jquery": "^3.6.0",
     "jshint": "^2.8.0",
     "jshint-stylish": "^2.0.1",
-    "mocha": "^2.2.4",
-    "normalize.css": "3.0.3",
-    "run-sequence": "^1.0.2",
-    "travis-after-all": "^1.4.4"
+    "mocha": "^8.3.2",
+    "normalize.css": "^8.0.1"
   },
   "engines": {
     "node": ">=0.10.0"
@@ -46,8 +42,8 @@
   "name": "html5-boilerplate",
   "private": true,
   "scripts": {
+    "start": "gulp watch",
     "build": "gulp build",
     "test": "gulp archive && mocha --reporter spec --timeout 5000"
-  },
-  "version": "5.3.0"
+  }
 }
